# spiceai

./: .gitignore  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rust.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  acknowledgements.md  clippy.toml  demo.py  flake.nix  go.mod  go.sum  spiceai.code-workspace  version.txt
crates/app/: Cargo.toml
crates/app/src/: lib.rs
crates/arrow_sql_gen/: Cargo.toml  README.md
crates/arrow_sql_gen/src/: arrow.rs  clickhouse.rs  lib.rs  mysql.rs  postgres.rs  sqlite.rs  statement.rs
crates/arrow_sql_gen/src/postgres/: builder.rs  composite.rs
crates/arrow_sql_gen/tests/: clickhouse_test.rs
crates/arrow_tools/: Cargo.toml  README.md
crates/arrow_tools/src/: lib.rs  record_batch.rs  schema.rs
crates/cache/: Cargo.toml
crates/cache/src/: lib.rs  lru_cache.rs  metrics.rs  utils.rs
crates/connector_odbc/: Cargo.toml  build.rs
crates/connector_odbc/src/: lib.rs  odbc.rs
crates/data_components/: Cargo.toml  README.md
crates/data_components/src/: arrow.rs  cdc.rs  clickhouse.rs  databricks.rs  databricks_delta.rs  databricks_spark.rs  debezium.rs  debezium_kafka.rs  delete.rs  delta.rs  delta_lake.rs  dremio.rs  duckdb.rs  flight.rs  flightsql.rs  github.rs  kafka.rs  lib.rs  mssql.rs  mysql.rs  odbc.rs  poly.rs  postgres.rs  sandwich.rs  snowflake.rs  spark_connect.rs  sqlite.rs  token_provider.rs  token_wrapper.rs  unity_catalog.rs  util.rs
crates/data_components/src/arrow/: struct_builder.rs  write.rs
crates/data_components/src/databricks/: write.rs
crates/data_components/src/debezium/: arrow.rs  change_event.rs
crates/data_components/src/deltatable/: write.rs
crates/data_components/src/duckdb/: creator.rs  federation.rs  sql_table.rs  write.rs
crates/data_components/src/flight/: federation.rs  stream.rs  write.rs
crates/data_components/src/flightsql/: federation.rs
crates/data_components/src/graphql/: builder.rs  client.rs  mod.rs  provider.rs
crates/data_components/src/metadata/: mod.rs  object.rs
crates/data_components/src/mssql/: connection_manager.rs  convert.rs  execution_plan.rs  mod.rs
crates/data_components/src/object/: metadata.rs  mod.rs  raw.rs  text.rs
crates/data_components/src/postgres/: write.rs
crates/data_components/src/sharepoint/: client.rs  drive_items.rs  error.rs  mod.rs  table.rs
crates/data_components/src/spark_connect/: federation.rs
crates/data_components/src/sqlite/: write.rs
crates/data_components/src/unity_catalog/: provider.rs
crates/data_components/src/util/: column_reference.rs  constraints.rs  indexes.rs  on_conflict.rs  retriable_error.rs  secrets.rs  transient_error.rs
crates/db_connection_pool/: Cargo.toml
crates/db_connection_pool/src/: clickhousepool.rs  dbconnection.rs  duckdb_legacy_pool.rs  duckdbpool.rs  lib.rs  mysqlpool.rs  odbcpool.rs  postgrespool.rs  snowflakepool.rs  sqlitepool.rs
crates/db_connection_pool/src/dbconnection/: clickhouseconn.rs  duckdb_legacy_conn.rs  duckdbconn.rs  mysqlconn.rs  odbcconn.rs  postgresconn.rs  snowflakeconn.rs  sqliteconn.rs
crates/document_parse/: Cargo.toml
crates/document_parse/src/: docx.rs  lib.rs  pdf.rs
crates/duckdb_datafusion/: Cargo.toml  README.md
crates/duckdb_datafusion/src/: lib.rs
crates/flight_client/: Cargo.toml
crates/flight_client/src/: lib.rs  tls.rs
crates/flight_datafusion/: Cargo.toml  README.md
crates/flight_datafusion/src/: expr.rs  lib.rs
crates/flightrepl/: Cargo.toml
crates/flightrepl/src/: config.rs  lib.rs  nsql.rs
crates/flightsql_datafusion/: Cargo.toml  README.md
crates/flightsql_datafusion/src/: lib.rs
crates/llms/: Cargo.toml
crates/llms/src/: lib.rs  openai.rs
crates/llms/src/anthropic/: chat.rs  mod.rs  types.rs  types_stream.rs
crates/llms/src/chat/: candle.rs  mistral.rs  mod.rs
crates/llms/src/chunking/: mod.rs
crates/llms/src/embeddings/: mod.rs
crates/llms/src/nql/: candle.rs  mistral.rs  mod.rs  openai.rs  (+1 more)
crates/model_components/: Cargo.toml
crates/model_components/src/: lib.rs  model.rs
crates/ns_lookup/: Cargo.toml
crates/ns_lookup/src/: lib.rs
crates/otel-arrow/: Cargo.toml
crates/otel-arrow/src/: converter.rs  error.rs  exporter.rs  lib.rs  schema.rs
crates/pg_server/: Cargo.toml
crates/runtime/: Cargo.toml
crates/runtime/benches/: bench.rs
crates/runtime/src/: accelerated_table.rs  accelerator_engines.rs  arrow.rs  auth.rs  builder.rs  config.rs  dataaccelerator.rs  databackend.rs  dataconnector.rs  datafusion.rs  datamanager.rs  dataprovider.rs  datapublisher.rs  datasets_health_monitor.rs  datasource.rs  dataupdate.rs  ducknsql.rs  extension.rs  extensions.rs  flight.rs  http.rs  internal_table.rs  lib.rs  metrics.rs  model.rs  modelformat.rs  modelruntime.rs  modelsource.rs  object_store_registry.rs  opentelemetry.rs  parameters.rs  pg_server.rs  podswatcher.rs  query_context.rs  query_history.rs  schemastore.rs  secrets.rs  secretstore.rs  spice_metrics.rs  spice_metrics_recorder.rs  (+10 more)
crates/runtime/tests/: integration.rs
crates/secrets/: Cargo.toml
crates/secrets/src/: aws.rs  aws_secrets_manager.rs  env.rs  file.rs  keyring.rs  kubernetes.rs  lib.rs
crates/spice_cloud/: Cargo.toml
crates/spice_cloud/src/: catalog.rs  lib.rs  schema.rs
crates/spiceai_extension/: Cargo.toml
crates/spiceai_extension/src/: lib.rs
crates/spicepod/: Cargo.toml
crates/spicepod/src/: component.rs  lib.rs  reader.rs  spec.rs  spicepod.rs  writer.rs
crates/sql_provider_datafusion/: Cargo.toml  README.md
crates/sql_provider_datafusion/src/: dbconnection.rs  dbconnectionpool.rs  expr.rs  federation.rs  lib.rs
crates/sql_provider_datafusion/tests/: postgres_integration_test.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: anonymous.rs  exporter.rs  lib.rs  meter.rs
crates/util/: Cargo.toml
crates/util/src/: fibonacci_backoff.rs  lib.rs
tools/flightpublisher/: Cargo.toml
tools/flightpublisher/src/: main.rs
tools/flightsubscriber/: Cargo.toml
tools/flightsubscriber/src/: main.rs
tools/spicepodschema/: Cargo.toml
tools/spicepodschema/src/: main.rs
(+1503 files in other folders)
