[workspace]
default-members = ["bin/spiced"]
members = [
  "bin/spiced/",
  "crates/data_components",
  "crates/flight_client",
  "crates/spicepod",
  "crates/app",
  "crates/arrow_sql_gen",
  "crates/arrow_tools",
  "crates/flightrepl",
  "crates/llms",
  "crates/model_components",
  "crates/ns_lookup",
  "crates/util",
  "crates/spice_cloud",
  "crates/otel-arrow",
  "crates/telemetry",
  "tools/flightpublisher/",
  "tools/flightsubscriber/",
  "tools/spicepodschema/",
]

# Explicitly set the resolver to version 2, which is the default for packages with edition >= 2021
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "2"

[workspace.package]
edition = "2021"
exclude = [".github/"]
homepage = "https://spice.ai"
license = "Apache-2.0"
repository = "https://github.com/spiceai/spiceai"
rust-version = "1.81"
version = "0.17.4-beta.1"

[workspace.dependencies]
arrow = "52.2.0"
arrow-buffer = "52.2.0"
arrow-flight = "52.2.0"
arrow-json = "52.2.0"
arrow-ipc = "52.2.0"
parquet = "52.2.0"
arrow-odbc = "11.2.0"
async-openai = { git = "https://github.com/spiceai/async-openai", rev = "9b0f8caa3be0eb97ec35e0abebb31d016821035d" }
async-stream = "0.3.5"
async-trait = "0.1.77"
base64 = "0.22.1"
bb8 = "0.8"
bb8-postgres = "0.8"
chrono = "0.4.38"
clap = { version = "4.5.16", features = ["derive"] }
clickhouse-rs = { git = "https://github.com/spiceai/clickhouse-rs.git", tag = "0.2.1", features = [
  "tokio_io",
  "tls",
] }
datafusion = "41.0.0"
datafusion-common = "41"
datafusion-expr = "41"
datafusion-execution = "41"
datafusion-federation = "0.1"
datafusion-federation-sql = { git = "https://github.com/spiceai/datafusion-federation.git", rev = "b6682948d07cc3155edb3dfbf03f8b55570fc1d2" }
datafusion-functions-json = "0.41"
datafusion-table-providers = { git = "https://github.com/datafusion-contrib/datafusion-table-providers.git", rev = "701f54ffe26210759134e7c033c53fd39bf3eee7" }
dotenvy = "0.15"
duckdb = "1.0.0"
fundu = "2.0.0"
futures = "0.3.30"
globset = "0.4.14"
graph-rs-sdk = { git = "https://github.com/spiceai/graph-rs-sdk", rev = "55c8b8a28915c7ad782ae8468f7927567abd0f26" }
insta = { version = "1.40.0", features = ["filters"] }
itertools = "0.12"
mysql_async = { version = "0.34.1", features = ["native-tls-tls", "chrono"] }
object_store = { version = "0.10.2" }
odbc-api = { version = "8.1.2" }
opentelemetry = { version = "0.24", default-features = false, features = ["metrics"] }
opentelemetry_sdk = { version = "0.24", default-features = false, features = ["metrics", "rt-tokio", "trace"] }
opentelemetry-prometheus = "0.17"
opentelemetry-zipkin = { version = "0.22.0", default-features = false, features = ["reqwest", "reqwest-rustls"] }
opentelemetry-http = { version = "0.13.0", features = ["reqwest-rustls"] }
pem = "3.0.4"
prometheus = "0.13"
r2d2 = "0.8.10"
regex = "1.10.3"
reqwest = {version = "0.12.5", features = ["json", "rustls-tls"] }
rusqlite = { version = "0.31.0", features = ["bundled-decimal"] }
rustls = "0.23"
rustls-pemfile = "2.1.2"
secrecy = "0.8.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.30"
snafu = "0.8.0"
snowflake-api = { git = "https://github.com/spiceai/snowflake-rs.git", rev = "2991d97548b0cd7a721704165ed07f7b2818cf7b" }
ssh2 = { version = "0.9.4" }
suppaftp = { version = "5.3.1", features = ["async"] }
tokio = { version = "1.39.3", features = [
  "rt-multi-thread",
  "signal",
  "macros",
] }
tokio-postgres = { version = "0.7.10", features = [
  "with-chrono-0_4",
  "with-uuid-1",
] }
tokio-rusqlite = "0.5.1"
tonic = { version = "0.11", features = ["gzip", "tls"] }
tonic-health = { version = "0.11" }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-opentelemetry = "0.25.0"
tracing-futures = { version = "0.2.5", features = ["futures-03"] }
uuid = "1.9.1"
x509-certificate = "0.23.1"

[patch.crates-io]
datafusion = { git = "https://github.com/spiceai/datafusion.git", rev = "a913e1aa45a610980983b8a1d10b26e5a4f99810" }
datafusion-common = { git = "https://github.com/spiceai/datafusion.git", rev = "a913e1aa45a610980983b8a1d10b26e5a4f99810" }
datafusion-expr = { git = "https://github.com/spiceai/datafusion.git", rev = "a913e1aa45a610980983b8a1d10b26e5a4f99810" }
datafusion-execution = { git = "https://github.com/spiceai/datafusion.git", rev = "a913e1aa45a610980983b8a1d10b26e5a4f99810" }
datafusion-federation = { git = "https://github.com/spiceai/datafusion-federation.git", rev = "b6682948d07cc3155edb3dfbf03f8b55570fc1d2" }
duckdb = { git = "https://github.com/spiceai/duckdb-rs.git", rev = "f2ca47d094a5636df8b9f3792b2f474a7b210dc1" }
odbc-api = { git = "https://github.com/spiceai/odbc-api.git", rev = "9807702dafdd8679d6bcecb0730b17e55c13e2e1" }
arrow-odbc = { git = "https://github.com/spiceai/arrow-odbc.git", rev = "24ecbdfc2c482f1ce84c595ab1202530a37815d6" }

rusqlite = { git = "https://github.com/spiceai/rusqlite.git", rev = "97054b6af725caf5d3e952e349746706e00d0ea5" }

# Tracking Issue: https://github.com/allan2/dotenvy/issues/113
dotenvy = { git = "https://github.com/spiceai/dotenvy.git", rev = "e5cef1871b08003198949dfe2da988633eaad78f" }
