[workspace]
default-members = ["bin/spiced"]
members = [
  "bin/spiced/",
  "crates/app",
  "crates/arrow_sql_gen",
  "crates/arrow_tools",
  "crates/data_components",
  "crates/document_parse",
  "crates/flightrepl",
  "crates/flight_client",
  "crates/llms",
  "crates/model_components",
  "crates/ns_lookup",
  "crates/otel-arrow",
  "crates/spicepod",
  "crates/spice_cloud",
  "crates/telemetry",
  "crates/util",
  "tools/flightpublisher/",
  "tools/flightsubscriber/",
  "tools/spicepodschema/", 
]

# Explicitly set the resolver to version 2, which is the default for packages with edition >= 2021
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "2"

[workspace.package]
edition = "2021"
exclude = [".github/"]
homepage = "https://spice.ai"
license = "Apache-2.0"
repository = "https://github.com/spiceai/spiceai"
rust-version = "1.82"
version = "1.0.0-rc.1"

[workspace.dependencies]
arrow = "53"
arrow-buffer = "53"
arrow-flight = "53"
# Use published version once https://github.com/apache/arrow-rs/pull/6606 is released
arrow-json = { git = "https://github.com/spiceai/arrow-rs.git", rev = "6013498d7d4d59f7b16d0e28b3e0b379732fbf07" }
arrow-ipc = "53"
arrow-schema = "53"
parquet = "53"
arrow-odbc = "11.2.0"
async-openai = { git = "https://github.com/spiceai/async-openai", rev = "df4fc93b21711a46e6cd3e91ecea72b4f32c856f" }
async-stream = "0.3.5"
async-trait = "0.1.83"
base64 = "0.22.1"
bb8 = "0.8"
bb8-postgres = "0.8"
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
clickhouse-rs = { git = "https://github.com/spiceai/clickhouse-rs.git", tag = "0.2.1", features = [
  "tokio_io",
  "tls",
] }
datafusion = "42"
datafusion-common = "42"
datafusion-expr = "42"
datafusion-execution = "42"
datafusion-federation = "0.1"
datafusion-federation-sql = { git = "https://github.com/spiceai/datafusion-federation.git", rev = "0aabd423ef8aea0ae05479331d1486e9ef8f8061" }
datafusion-functions-json = "0.42"
datafusion-table-providers = "0.1"
dotenvy = "0.15"
duckdb = "1.1.1"
fundu = "2.0.1"
futures = "0.3.30"
globset = "0.4.15"
graph-rs-sdk = { git = "https://github.com/spiceai/graph-rs-sdk", rev = "f8703df260146b313461029d41c4a021306832b8" }
graphql-parser = "0.4.0"
insta = { version = "1.40.0", features = ["filters"] }
itertools = "0.13"
lazy_static = "1.5.0"
mysql_async = { version = "0.34.1", features = ["native-tls-tls", "chrono"] }
object_store = { version = "0.11" }
odbc-api = { version = "8.1.2" }
opentelemetry = { version = "0.26", default-features = false, features = ["metrics"] }
opentelemetry_sdk = { version = "0.26", default-features = false, features = ["metrics", "rt-tokio", "trace"] }
opentelemetry-prometheus = "0.17"
opentelemetry-zipkin = { version = "0.26", default-features = false, features = ["reqwest", "reqwest-rustls"] }
opentelemetry-http = { version = "0.26", features = ["reqwest-rustls"] }
pem = "3.0.4"
prometheus = "0.13"
r2d2 = "0.8.10"
regex = "1.10.3"
reqwest = {version = "0.12.5", features = ["json", "rustls-tls"] }
rusqlite = { version = "0.31.0", features = ["bundled-decimal"] }
rustls = "0.23"
rustls-pemfile = "2.1.3"
secrecy = "0.8.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.30"
snafu = "0.8.5"
snowflake-api = { git = "https://github.com/spiceai/snowflake-rs.git", rev = "f95bd4715b9b9e3eaa425d7a775b49e1dcbb1212" }
ssh2 = { version = "0.9.4" }
suppaftp = { version = "5.3.1", features = ["async"] }
tiberius = { version = "0.12.3", default-features = false, features = ["tds73", "rustls", "chrono"] }
tokio = { version = "1", features = [
  "rt-multi-thread",
  "signal",
  "macros",
] }
tokio-postgres = { version = "0.7.12", features = [
  "with-chrono-0_4",
  "with-uuid-1",
] }
tokio-rusqlite = "0.5.1"
tokio-util = { version = "0.7.11", features = ["compat"] }
tonic = { version = "0.12", features = ["gzip", "tls"] }
tonic-health = { version = "0.12" }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-opentelemetry = "0.27"
tracing-futures = { version = "0.2.5", features = ["futures-03"] }
uuid = "1.9.1"
x509-certificate = "0.23.1"

[patch.crates-io]
datafusion = { git = "https://github.com/spiceai/datafusion.git", rev = "cfef4ed0f8303c18f2235f8384c244197bf779c4" }
datafusion-common = { git = "https://github.com/spiceai/datafusion.git", rev = "cfef4ed0f8303c18f2235f8384c244197bf779c4" }
datafusion-expr = { git = "https://github.com/spiceai/datafusion.git", rev = "cfef4ed0f8303c18f2235f8384c244197bf779c4" }
datafusion-execution = { git = "https://github.com/spiceai/datafusion.git", rev = "cfef4ed0f8303c18f2235f8384c244197bf779c4" }

datafusion-federation = { git = "https://github.com/spiceai/datafusion-federation.git", rev = "0aabd423ef8aea0ae05479331d1486e9ef8f8061" }
datafusion-table-providers = { git = "https://github.com/datafusion-contrib/datafusion-table-providers.git", rev = "5d1126273d162137c7c387238b15d9b61cdfbb45" }

odbc-api = { git = "https://github.com/spiceai/odbc-api.git", rev = "9807702dafdd8679d6bcecb0730b17e55c13e2e1" }
arrow-odbc = { git = "https://github.com/spiceai/arrow-odbc.git", rev = "dfb1e03a5f0702c1a318db5abf40e762d6b2bcc2" }

rusqlite = { git = "https://github.com/spiceai/rusqlite.git", rev = "97054b6af725caf5d3e952e349746706e00d0ea5" }

# Tracking Issue: https://github.com/allan2/dotenvy/issues/113
dotenvy = { git = "https://github.com/spiceai/dotenvy.git", rev = "e5cef1871b08003198949dfe2da988633eaad78f" }

# Required until next release with opentelemetry 0.26 support: https://github.com/open-telemetry/opentelemetry-rust/pull/2183
opentelemetry-prometheus = { git = "https://github.com/open-telemetry/opentelemetry-rust.git", rev = "e91138351a689cd21923c15eb48f5fbc95ded807" }
