[package]
name = "app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "All loaded components from the root Spicepod and its dependencies"

[dependencies]
snafu.workspace = true
spicepod = { path = "../spicepod" }
tracing.workspace = true
