[package]
description = "All loaded components from the root Spicepod and its dependencies"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "app"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
snafu.workspace = true
spicepod = { path = "../spicepod" }
