[package]
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
name = "arrow_sql_gen"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow.workspace = true
bigdecimal = "0.4.3"
chrono.workspace = true
chrono-tz = "0.8.6"
datafusion-table-providers.workspace = true
snafu.workspace = true
clickhouse-rs = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }

[features]
clickhouse = ["dep:clickhouse-rs", "dep:uuid"]
