[package]
name = "arrow_tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
arrow.workspace = true
snafu.workspace = true
serde_json.workspace = true
