[package]
name = "cache"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Spice cache"

[dependencies]
snafu.workspace = true
spicepod = { path = "../spicepod" }
tracing.workspace = true
async-trait.workspace = true
async-stream.workspace = true
arrow.workspace = true
tokio.workspace = true
datafusion.workspace = true
futures.workspace = true
metrics.workspace = true
byte-unit="5.1.4"
fundu = { workspace = true }
moka = {version = "0.12.7", features = ["future"]}

[features]
default = []
