[package]
name = "data_components"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow.workspace = true
arrow-flight.workspace = true
async-stream.workspace = true
datafusion.workspace = true
futures.workspace = true
async-trait.workspace = true
r2d2 = { workspace = true, optional = true }
snafu.workspace = true
tokio.workspace = true
tracing.workspace = true
flight_client = { path = "../flight_client" }
sql_provider_datafusion = { path = "../sql_provider_datafusion" }
secrets = { path = "../secrets" }
deltalake = { git = "https://github.com/spiceai/delta-rs.git", rev = "5d7cb57499ef3c35b944cf51fdd5f267e641f6d1", features = [
    "datafusion-ext",
    "s3",
    "azure",
], optional = true }
serde.workspace = true
reqwest = { version = "0.11.24", features = ["json"] }
db_connection_pool = { path = "../db_connection_pool" }
duckdb = { workspace = true, features = ["bundled", "r2d2", "vtab", "vtab-arrow", "appender-arrow"], optional = true }
tonic = { workspace = true, optional = true }
bb8 = { workspace = true, optional = true }
bb8-postgres = { workspace = true, optional = true }
postgres-native-tls = { version = "0.5.0", optional = true }
tokio-postgres = { workspace = true, features = ["with-chrono-0_4"], optional = true }
mysql_async = { workspace = true, optional = true }
arrow_sql_gen = { path = "../arrow_sql_gen", optional = true }
rusqlite = { workspace = true, optional = true }
tokio-rusqlite = { workspace = true, optional = true }
spark-connect-rs =  { git = "https://github.com/spiceai/spark-connect-rs.git", rev = "d937df525d7c237c717b42e6146494c524dbf267", features = ["tls"], optional = true}
odbc-api = { workspace = true, optional = true }
arrow-odbc = { workspace = true, optional = true }
clickhouse-rs = { workspace = true, optional = true }
snowflake-api ={ workspace = true, optional = true }
uuid.workspace = true
datafusion-federation = { workspace = true }
datafusion-federation-sql = { workspace = true }
object_store = { workspace = true }
regex = "1.10.4"
bytes = "1.6.0"
url = "2.5.0"

[features]
duckdb = ["dep:duckdb", "dep:r2d2", "arrow_sql_gen",  "db_connection_pool/duckdb"]
flightsql = ["dep:tonic", "dep:r2d2"]
postgres = ["dep:bb8", "dep:bb8-postgres", "dep:postgres-native-tls", "arrow_sql_gen/postgres", "dep:tokio-postgres"]
mysql = ["dep:mysql_async", "arrow_sql_gen/mysql"]
sqlite = ["dep:rusqlite", "dep:tokio-rusqlite", "arrow_sql_gen/sqlite"]
clickhouse = ["dep:clickhouse-rs", "arrow_sql_gen/clickhouse"]
spark_connect = ["dep:spark-connect-rs"]
databricks = ["dep:deltalake", "spark_connect"]
odbc = ["dep:odbc-api", "dep:arrow-odbc"]
snowflake = ["dep:snowflake-api"]
