[package]
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
name = "data_components"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow-buffer.workspace = true
arrow-flight.workspace = true
arrow.workspace = true
async-stream.workspace = true
async-trait.workspace = true
base64.workspace = true
bytes = "1.6.0"
chrono.workspace = true
clickhouse-rs = { workspace = true, optional = true }
datafusion-federation = { workspace = true }
datafusion-federation-sql = { workspace = true }
datafusion-table-providers = { workspace = true }
datafusion.workspace = true
db_connection_pool = { path = "../db_connection_pool" }
delta_kernel = { version = "=0.3.0", features = ["default-engine", "cloud"], optional = true }
duckdb = { workspace = true, features = [
  "bundled",
  "r2d2",
  "vtab",
  "vtab-arrow",
  "appender-arrow",
], optional = true }
flight_client = { path = "../flight_client" }
futures.workspace = true
globset.workspace = true
graph-rs-sdk = {workspace = true, optional=true}
graphql-parser = "0.4.0"
http = {version= "1.1.0", optional=true}
object_store = { workspace = true }
rdkafka = { version = "0.36.2", optional = true }
regex = "1.10.4"
reqwest.workspace = true
rusqlite = { workspace = true, optional = true }
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
snowflake-api = { workspace = true, optional = true }
spark-connect-rs = { git = "https://github.com/spiceai/spark-connect-rs.git", rev = "d937df525d7c237c717b42e6146494c524dbf267", features = [
  "tls",
], optional = true }
tiberius = { workspace = true, optional = true }
tokio-postgres = { workspace = true, features = [
  "with-chrono-0_4",
], optional = true }
tokio.workspace = true
tokio-util = { workspace = true, optional = true }
tonic = { workspace = true, optional = true }
tracing.workspace = true
url = "2.5.0"
uuid.workspace = true

[target.'cfg(windows)'.dependencies]
rdkafka = { version = "0.36.2", features = ["cmake-build"], optional = true }

[features]
clickhouse = ["dep:clickhouse-rs"]
databricks = ["delta_lake", "spark_connect"]
debezium = ["dep:rdkafka"]
delta_lake = ["dep:delta_kernel"]
duckdb = [
  "dep:duckdb",
  "db_connection_pool/duckdb",
  "datafusion-table-providers/duckdb"
]
flightsql = ["dep:tonic"]
mssql = ["dep:tiberius", "dep:tokio-util"]
mysql = ["datafusion-table-providers/mysql"]
odbc = []
postgres = ["dep:tokio-postgres", "datafusion-table-providers/postgres"]
snowflake = ["dep:snowflake-api"]
spark_connect = ["dep:spark-connect-rs"]
sharepoint = ["dep:graph-rs-sdk", "dep:http"]
sqlite = ["dep:rusqlite", "datafusion-table-providers/sqlite"]

[dev-dependencies]
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
