[package]
name = "db_connection_pool"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
duckdb = { workspace = true, features = ["bundled", "r2d2", "vtab", "vtab-arrow"], optional = true }
datafusion.workspace = true
async-trait.workspace = true
r2d2 = { workspace = true, optional = true }
snafu.workspace = true
tracing.workspace = true
futures.workspace = true
bb8 = { workspace = true, optional = true }
bb8-postgres = { workspace = true, optional = true }
arrow_sql_gen = { path = "../arrow_sql_gen", optional = true }
arrow.workspace = true
pem = { workspace = true, optional = true }
rusqlite = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tokio-rusqlite = { workspace = true, optional = true }
mysql_async = { workspace = true, optional = true }
ns_lookup = { path = "../ns_lookup" }
native-tls = { version = "0.2.11", optional = true }
postgres-native-tls = { version = "0.5.0", optional = true }
odbc-api = { workspace = true, optional = true }
arrow-odbc = { workspace = true, optional = true }
lazy_static = "1.4.0"
clickhouse-rs = { workspace = true, optional = true }
tokio-postgres = { workspace = true , optional = true}
async-stream = { workspace = true, optional = true }
snowflake-api = { workspace = true, optional = true }
sysinfo = { workspace = true, optional = true }
pkcs8 = { version = "0.10.2",  features = ["encryption", "pem", "3des"], optional = true }
url = "2.5.0"
secrecy.workspace = true

[dev-dependencies]
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[features]
duckdb = ["dep:duckdb", "dep:r2d2"]
postgres = [
    "dep:bb8",
    "dep:bb8-postgres",
    "dep:postgres-native-tls",
    "dep:native-tls",
    "dep:pem",
    "dep:tokio",
    "arrow_sql_gen/postgres",
    "dep:tokio-postgres",
    "dep:async-stream",
    "dep:sysinfo",
]
sqlite = ["dep:rusqlite", "dep:tokio-rusqlite", "arrow_sql_gen/sqlite"]
mysql = ["dep:mysql_async", "arrow_sql_gen/mysql"]
clickhouse = ["dep:clickhouse-rs", "arrow_sql_gen/clickhouse", "dep:async-stream"]
odbc = ["dep:odbc-api", "dep:arrow-odbc", "dep:tokio"]
snowflake = ["dep:snowflake-api", "dep:pkcs8"]

