[package]
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
name = "db_connection_pool"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
arrow.workspace = true
arrow-odbc = { workspace = true, optional = true }
arrow_sql_gen = { path = "../arrow_sql_gen", optional = true }
async-stream = { workspace = true, optional = true }
async-trait.workspace = true
bb8 = { workspace = true, optional = true }
bb8-postgres = { workspace = true, optional = true }
clickhouse-rs = { workspace = true, optional = true }
datafusion.workspace = true
duckdb = { workspace = true, features = [
  "bundled",
  "r2d2",
  "vtab",
  "vtab-arrow",
], optional = true }
dyn-clone = { version = "1.0.17", optional = true }
flume = { version = "0.11.0", optional = true }
futures.workspace = true
lazy_static = "1.4.0"
mysql_async = { workspace = true, optional = true }
native-tls = { version = "0.2.11", optional = true }
ns_lookup = { path = "../ns_lookup" }
odbc-api = { workspace = true, optional = true }
pem = { workspace = true, optional = true }
pkcs8 = { version = "0.10.2", features = [
  "encryption",
  "pem",
  "3des",
], optional = true }
postgres-native-tls = { version = "0.5.0", optional = true }
r2d2 = { workspace = true, optional = true }
rusqlite = { workspace = true, optional = true }
secrecy.workspace = true
snafu.workspace = true
snowflake-api = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tokio-postgres = { workspace = true, optional = true }
tokio-rusqlite = { workspace = true, optional = true }
tracing.workspace = true
url = "2.5.0"

[dev-dependencies]
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[features]
clickhouse = [
  "dep:clickhouse-rs",
  "arrow_sql_gen/clickhouse",
  "dep:async-stream",
]
duckdb = ["dep:duckdb", "dep:r2d2"]
mysql = ["dep:mysql_async", "arrow_sql_gen/mysql"]
odbc = ["dep:odbc-api", "dep:arrow-odbc", "dep:tokio", "dep:flume", "dep:dyn-clone"]
postgres = [
  "dep:bb8",
  "dep:bb8-postgres",
  "dep:postgres-native-tls",
  "dep:native-tls",
  "dep:pem",
  "dep:tokio",
  "arrow_sql_gen/postgres",
  "dep:tokio-postgres",
  "dep:async-stream",
]
snowflake = ["dep:snowflake-api", "dep:pkcs8"]
sqlite = ["dep:rusqlite", "dep:tokio-rusqlite", "arrow_sql_gen/sqlite"]
